--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "multiple-cucumber-html-reporter": "^3.3.0",
     "ts-node": "^10.9.1",
     "winston": "^3.8.2"
+  },
+  "dependencies": {
+    "npm": "^10.5.0"
   }
 }
