--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "debug": "cross-env ENV=prod PWDEBUG=1 DEBUG=pw:api cucumber-js --config=config/cucumber.js",
     "pretest": "npx ts-node src/helper/report/init.ts",
-    "test": "cross-env ENV=prod FORCE_COLOR=0 cucumber-js --config=config/cucumber.js || true",
+    "test": "cross-env ENV=prod FORCE_COLOR=0 cucumber-js --config=config/cucumber.js || exit 0",
     "posttest": "npx ts-node src/helper/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
@@ -15,7 +15,7 @@
     "cucumber - TS",
     "playwright-cucumber"
   ],
-  "author": "Koushik @LetCode with Koushik",
+  "author": "chuv@1c.ru",
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^9.0.1",
